# jsauto

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/js_automation/: __init__.py  analyze.py  capture.py  cli.py  device.py  measure.py  skill.py
src/js_automation/data/: SKILL.md
tests/: test_cli_smoke.py
